--- a/Basic type in with note/Styling.css
+++ b/Basic type in with note/Styling.css
@@ -1,16 +1,8 @@
+/* This style was developed by the Kaishi 1.5k team and is soley a modification */
 .card {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Noto Sans JP", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", "MS UI Gothic", sans-serif;
     font-size: 20px;
     text-align: center;
-   }
-   
-   img {
-   max-width: 400px;
-   max-height: 300px;
-   }
-   
-   .mobile img {
-   max-width: 50vw;
    }
    
    /* This part defines the bold color. */
