--- a/JP type in/Styling.css
+++ b/JP type in/Styling.css
@@ -1,3 +1,4 @@
+/* This style was developed by the Kaishi 1.5k team and is soley a modification */
 .card {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Noto Sans JP", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", "MS UI Gothic", sans-serif;
     font-size: 20px;
