--- a/Word mining/Styling.css
+++ b/Word mining/Styling.css
@@ -1,5 +1,7 @@
 .card {
-    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Noto Sans JP", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", "MS UI Gothic", sans-serif;
+
+    /* sans-serif  was replaced with Roboto*/
+    font-family: "Noto Sans JP", Roboto;
     font-size: 20px;
     text-align: center;
    }
@@ -17,4 +19,4 @@
    }
    
    /* This part defines the bold color. */
-   b{color: #5586cd}
+   b{color: #e78284}
