--- a/src/Basic type in with note/Styling.css
+++ b/src/Basic type in with note/Styling.css
@@ -1,9 +1,7 @@
-/* This style was developed by the Kaishi 1.5k team and is soley a modification */
 .card {
-    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Noto Sans JP", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", "MS UI Gothic", sans-serif;
+    font-family: "Noto Sans JP", Roboto;
     font-size: 20px;
     text-align: center;
    }
    
-   /* This part defines the bold color. */
-   b{color: #5586cd}
+   b{color: #e78284}
