--- a/src/physics/Styling.css
+++ b/src/physics/Styling.css
@@ -1,7 +1,18 @@
 .card {
-    font-family: arial;
+    font-family: Roboto;
     font-size: 20px;
     text-align: center;
-    color: black;
-    background-color: white;
 }
+
+img {
+    max-width: 400px;
+    max-height: 300px;
+}
+   
+.mobile img 
+{
+    max-width: 50vw;
+}
+   
+/* accent color */
+b{color: #e78284}
