--- a/src/Book Mining FR/Styling.css
+++ b/src/Book Mining FR/Styling.css
@@ -1,8 +1,16 @@
 .card {
- font-family: "Noto Sans JP", Red Hat Text;
- font-size: 44px;
- text-align: center;
+  font-family: "Noto Sans JP", Red Hat Text;
+  font-size: 44px;
+  text-align: center;
+  color: #4c4f69;
+  background-color: #eff1f5;
+  
 }
+.card.nightMode {
+  color: #cad3f5;
+  background-color: #24273a;
+}
+
 
 /* open for change 
 original: width = 300px, height = 250px
@@ -13,7 +21,8 @@ max-height: 200px;
 }
 
 .mobile img {
-max-width: 50vw;
+max-width: 200px;
+max-height: 200px;
 }
 
 /* This part defines the bold color. */
@@ -21,7 +30,7 @@ b{color: #ed8796}
 
 /* Definition container */
 .container {
-  --background: #1e2030;
+  --background: #e6e9ef;
 	
 	border-radius: 10px;
   background-color: var(--background);
@@ -31,6 +40,10 @@ b{color: #ed8796}
   margin: 5px auto;
   overflow: hidden;
   position: relative;
+}
+
+.nightMode .container{
+  --background: #1e2030;
 }
 
 .sentence {
