--- a/src/Book Mining FR/Styling.css
+++ b/src/Book Mining FR/Styling.css
@@ -16,13 +16,12 @@
   --container-background-light-mobile: #e6e9ef;
   --text-color-light-mobile: #4c4f69;
 
+  /* dark */
   --background-color-dark-mobile: #3d3d3d;
   --container-background-dark-mobile: #303030;
   --text-color-dark-mobile: white;
   
-
   --accent-color: #ed8796;
-
 }
 
 .card {
@@ -32,33 +31,27 @@
   color: var(--text-color-light);
   background-color: var(--background-color-light);
 }
-
 .mobile .card {
   color: var(--text-color-light-mobile);
   background-color: var(--background-color-light-mobile);
 }
-
 .card.nightMode {
   color: var(--text-color-dark);
   background-color: var(--background-color-dark);
 }
-
 .mobile .card.nightMode {
   color: var(--text-color-dark-mobile);
   background-color: var(--background-color-dark-mobile);
 }
 
-/* open for change 
-original: width = 300px, height = 250px
-*/
-img {
-  max-height: 400px;
-  width: auto;
-  border-radius: 10px;
-}
-
 b{color: var(--accent-color);}
 a{color: var(--accent-color);}
+
+.row {
+  display: flex;
+  flex-direction: row;
+	align-items: flex-start;
+}
 
 .container {
 	border-radius: 10px;
@@ -66,7 +59,7 @@ a{color: var(--accent-color);}
   line-height: 1.75em;
   text-align: center;
   padding: 0.5em 10px;
-  margin: 5px auto;
+  /*margin: 5px auto; */
   overflow: hidden;
   position: relative;
 }
@@ -86,12 +79,6 @@ a{color: var(--accent-color);}
   padding-bottom: 20px;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-	align-items: flex-start;
-}
-
 .column {
 	padding: 10px;
 }
@@ -100,8 +87,14 @@ a{color: var(--accent-color);}
   flex-grow: 1;
 }
 
+img {
+  max-height: 225px;
+  width: auto;
+  min-height: 200px;
+  border-radius: 10px;
+}
+
 .picture {
-  max-width: 400px;
   position: relative;
   font-size: 0;
 }
